# telegram-moderator-bot

./: .dockerignore  .editorconfig  .gitignore  .helmignore  .mise.toml  Chart.yaml  Dockerfile  Makefile  README.md  bot.py  pyproject.toml  renovate.json  requirements.txt  values.yaml
.github/workflows/: workflow.yml
bot/: __main__.py  rule.py  telegram.py
bot/event/: rule.py  subscriber.py
bot/event/rules/: __init__.py  idol.py
bot/rule/: __init__.py  darts.py  dice.py  nho.py  slash.py
bot/rule/sky/: rule.py
chart/: values.yaml
chart/templates/: config.yaml  gcp-config.yaml  gcp-secrets.yaml  horoscope_subscriber.yaml  rule-secrets.yaml  secrets.yaml  service-account.yaml  update_handler.yaml
src/bot/: __main__.py  config.py  nats_updater.py  rule_state.py  telegram.py  telegram_bot.py
src/bot/event/: subscriber.py
src/bot/event/rules/: idol.py
src/bot/events/: rule.py  subscriber.py
src/bot/events/rules/: idol.py
src/bot/rule/: __init__.py  darts.py  dice.py  nho.py  slash.py  smartypants.py
src/bot/rule/sky/: __init__.py  detector.py  rule.py
src/bot/rules/: __init__.py  darts.py  dice.py  lemons.py  nho.py  premium.py  rule.py  slash.py  smartypants.py
src/bot/rules/sky/: detector.py  rule.py
templates/: config.yaml  gcp-config.yaml  gcp-secrets.yaml  horoscope_subscriber.yaml  secrets.yaml  service-account.yaml  update_handler.yaml
terraform/: .terraform.lock.hcl  iam.tf  providers.tf  pubsub.tf
