[project]
requires-python = "==3.14.*"
name = "bot"
description = "Deletes messages."
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==3.4.0",
    "bs-nats-updater ==3.0.0",
    "bs-state [redis] ==3.0.*",
    "httpx ==0.28.*",
    "pydantic ==2.12.*",
    "python-telegram-bot ==22.5",
    "pyyaml ==6.0.3",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest ==9.0.*",
    "ruff ==0.14.9",
    "types-pyyaml >=6, <7",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]
